Fix image details displaying on mobile devices

--- a/src/components/PaintingDetails.scss
+++ b/src/components/PaintingDetails.scss
@@ -4,15 +4,17 @@ $description-height: 10vh;
 
 .painting-details {
   width: 100%;
-  height: 100%;
-  
 
   .description {
     position: absolute;
     bottom: 50px;
-    left: 50px;;
+    left: 50px;
     height: $description-height;
     z-index: 410;
+
+    @media (max-width: 700px) {
+      z-index: 100;
+    }
 
     h1,
     span {
@@ -25,23 +27,52 @@ $description-height: 10vh;
   .image-navigation-wrapper {
     height: 95vh;
     box-sizing: border-box;
-    padding: 30px;
+    padding: 20px;
 
     display: flex;
+    flex-flow: row wrap;
     align-items: center;
+    align-content: center;
     justify-content: space-between;
+
+    @media (max-width: 700px) {
+      justify-content: space-around;
+      height: 80vh;
+      margin-top: 25px + $mobile-site-border-width;
+    }
 
     .painting-link {
       width: 10%;
+      padding: 20px 0;
 
+      @media (max-width: 700px) {
+        width: 50%;
+      }
+
+      &.left-arrow {
+        order: 1;
+
+        @media (max-width: 700px) {
+          order: 3;
+        }
+      }
+
+      &.right-arrow {
+        order: 4;
+      }
     }
 
     img {
-      // object-fit: contain;
+      object-fit: contain;
+      order: 2;
       display: block;
       max-width: 80%;
       max-height: 100%;
       box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.19);
+
+      @media (max-width: 700px) {
+        max-width: 100%;
+      }
     }
   }
 }
